--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Flashlight</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Simple Flashlight</string>
     <string name="action_settings">Settings</string>
+    <string name="do_not_dim_screen">FlashLightDoNotDimScreen</string>
+    <string name="camera_flash_not_supported">This device does not support camera flash.  Using screen instead.</string>
+    <string name="tap_to_turn_on">Tap anywhere on the screen to turn on the Flashlight</string>
+    <string name="tap_to_turn_off">Tap anywhere on the screen to turn off the Flashlight</string>
 
 </resources>
