--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Simple Flashlight</string>
+    <string name="app_name">Tap Flashlight</string>
     <string name="action_settings">Settings</string>
     <string name="do_not_dim_screen">FlashLightDoNotDimScreen</string>
     <string name="camera_flash_not_supported">This device does not support camera flash.  Using screen instead.</string>
